fixed issue where the header was covering the scrollbar

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,11 +1,14 @@
+.sidenav-container {
+  min-height: 100%;
+}
+
 .sidenav .mat-toolbar {
   background: inherit;
 }
 
 .mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+  position: fixed;
+  z-index: 999;
 }
 
 .contact-buttons {
@@ -20,7 +23,6 @@
   padding-left: 16px;
   font-size: 24px;
 }
-
 //fixes a drop in height on the navigation bar when scaling the screen down.
 @media (max-width: 599px) {
   .mat-toolbar-row,
